# KPassword

./: .gitignore  CONFIGURAR-ATUALIZADOR.ps1  README.md  package-lock.json  package.json
.github/workflows/: publicar.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
